This commit updates the prose explaining the JS for dropdowns. It also fixes a bug where there would be too much padding on the #layout div if the menu was expanded and then the window was made large.

--- a/public/css/layouts/side-menu.css
+++ b/public/css/layouts/side-menu.css
@@ -27,18 +27,14 @@ This is the parent `<div>` that contains the menu and the content area.
     position: relative;
     padding-left: 0;
 }
-    #layout.active {
-        position: relative;
+    #layout.active #menu {
+        left: 150px;
+        width: 150px;
+    }
+
+    #layout.active .menu-link {
         left: 150px;
     }
-        #layout.active #menu {
-            left: 150px;
-            width: 150px;
-        }
-
-        #layout.active .menu-link {
-            left: 150px;
-        }
 /*
 The content `<div>` is where all your content goes.
 */
@@ -236,3 +232,17 @@ Hides the menu at `48em`, but modify this based on your app's needs.
         left: 150px;
     }
 }
+
+@media (max-width: 48em) {
+    /* Only apply this when the window is small. Otherwise, the following
+    case results in extra padding on the left:
+        * Make the window small.
+        * Tap the menu to trigger the active state.
+        * Make the window large again.
+    */
+    #layout.active {
+        position: relative;
+        left: 150px;
+    }
+}
+
